Fix table cell overflow

--- a/base.css
+++ b/base.css
@@ -112,6 +112,8 @@ body {
   padding: 0 .5rem;
   box-shadow: 1px 0 rgba(0,0,0,.3);
   color: rgba(0,0,0,.6);
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .v2-table-header-cell:hover {
   background: rgba(0,0,0,.05);
@@ -143,6 +145,8 @@ body {
   height: 100%;
   box-sizing: border-box;
   padding: 0 .5rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .v2-table-row--selected {
   background: rgba(0,0,0,.1);
